Update/fix сode readability
Updates in accordance with the feedback/comments

--- a/homeworks/yehor.honcharenko_NOcode-developer/GamesProject/style.css
+++ b/homeworks/yehor.honcharenko_NOcode-developer/GamesProject/style.css
@@ -42,10 +42,6 @@ img {
   display: block;
 }
 
-.text-about>*+* {
-  margin-top: 24px;
-}
-
 h1 {
   color: #221F1F;
   font-size: 48px;
@@ -59,7 +55,7 @@ p {
   font-size: 22px;
   font-weight: 400;
   line-height: 32px;
-  margin: 0;
+  margin: 16 0 0 0;
 }
 
 a {
@@ -67,5 +63,4 @@ a {
   font-size: 22px;
   font-weight: 400;
   line-height: 32px;
-  text-decoration-line: underline;
 }
